# climate-data

./: README.md  countries.py  gitignore.txt  pyproject.toml  tokens.toml
climate_data/: countries.py  request.py
climate_data/copernicus/: cmip6.py  request.py
examples/: laos.ipynb  laos.py
tests/: test_cds_request.py  test_countries.py
